--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will download a prebuilt Ruby version, install dependencies and run tests with Rake
-# For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
-
 name: Ruby
 
 on:
@@ -33,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: bundle install
 
-    - name: Start Redis
+    - name: Start Redis ${{ matrix.redis }}
       uses: supercharge/redis-github-action@1.1.0
       with:
         redis-version: ${{ matrix.redis }}
